# llm-clipper

./: .env.example  ClipperAgent.py  ClipperAgentConfig.py  LICENSE  README.md  pyproject.toml  test_notification.py
clipper_agent/: clipboard.py  gemini_api.py  logging_utils.py  notification.py  prompt.py  settings.py
clipper_agent_config/: gui.py  settings_manager.py
tests/: test_e2e_mock.py  test_gemini_api.py  test_notification.py  test_paths.py  test_prompt.py  test_settings.py
