[project]
name = "llm-clipper"
version = "0.1.0"
description = ""
authors = [
    {name = "mossan-hoshi",email = "sackn5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pep8-naming = "^0.15.1"
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
