[tool.poetry]
name = "llm-clipper"
version = "0.1.0"
description = ""
authors = ["mossan-hoshi <sackn5@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = ">=1.8.2"
python-dotenv = ">=1.0.0"
google-generativeai = ">=0.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pep8-naming = "^0.15.1"
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
